# Job_search

./: Readme.md  main.py  pyproject.toml  vacancies.json
data/: vacancies.json
src/: hh_api.py  json_creator.py
