[tool.poetry]
name = "course-work-2"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
